creacion componentes para cada seccion

--- a/Proyecto-Angular/src/app/app.component.html
+++ b/Proyecto-Angular/src/app/app.component.html
@@ -1,160 +1,9 @@
-<!-- ENCABEZADO -->
-
-<header>
-
-  <!-- NAVEGADOR -->
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="menu">
-      <div class="container-fluid">
-          <a class="navbar-brand ms-3" href="#">
-              <span><img src="../assets/logo.png" style="height:3em"></span>
-          </a>
-          <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-              <ul class="navbar-nav mb-2 mb-lg-0">                            
-                  <li class="nav-item">
-                      <a class="nav-link" href="#acerca de mi">Acerca de mí</a>
-                  </li>                
-                  <li class="nav-item">
-                      <a class="nav-link" href="#conocimientos">Conocimientos</a>
-                  </li>                            
-                  <li class="nav-item">
-                      <a class="nav-link" href="#proyectos">Proyectos</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#experiencia laboral">Experiencia Laboral</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#formacion academica">Formación Académica</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#contacto">Contacto</a>
-                  </li>
-                  <li class="nav-item ms-5">
-                      <a class="nav-link" href="#"> <button id="boton" style="padding:5px; color:lightblue; 
-                      background-color: black;border: solid 2px lightblue;">Currículum</button></a>
-                  </li>
-              </ul>                        
-          </div>
-      </div>
-  </nav>
-
-      <!-- BANNER -->      
-
-  <div class="d-flex justify-content-center align-items-center" style="margin-top:40px !important">
-      <img src="../assets/Banner.jpg" width="100%" style="height:30em">
-      <img src="../assets/Foto Perfil.jpg" style="border-radius: 50%; height: 15em;
-      z-index: 1; position: absolute">
-      <div style="position: absolute;z-index: 1; margin-bottom: 2em; align-self: end">
-          <h2 id="a" style="font-family:Blippo; text-align: center; font-weight: bold;">
-              Julián Meneses</h2>
-          <h5 style="font-family:Blippo;font-weight: bold; text-align: center;">Desarrollador Web Full Stack</h5>
-      </div>
-  </div>
-</header>
-<section>
-
-    <!-- SECCIÓN ACERCA DE MÍ -->    
-
-  <article id="acerca de mi" class="d-flex justify-content-center mt-3">
-      <div class="card my-3" style="width: 50%;">
-          <div class="card-body" id="parent">                        
-              <h3 class="card-title" style="display: inline-block;"><strong>Acerca de mí</strong></h3>
-              <div style="display: inline-block; margin-left: 60%; position: relative;"  (click)="activarInput()">
-                  <a href=#>
-                      <i class="fa-solid fa-square-pen" style="font-size:30px; color:rgb(36, 95, 184) !important"></i>
-                  </a>
-              </div>                                                               
-              <p class="card-text">Estudiante de Desarrollo Web y Aplicaciones Digitales. Como 
-              desafío personal estoy buscando mi primera experiencia
-              laboral en el área de IT para poder aplicar mis conocimientos en un equipo de trabajo y
-              crecer profesionalmente.</p>  
-              <input *ngIf="inputEstado" placeholder="Ingrese el nuevo texto" id="input_parrafo" style="width:100%" > 
-              <input  style="width:100%;display: none">                                                          
-          </div>             
-      </div>
-  </article>          
-
-  <!-- SECCIÓN CONOCIMIENTOS -->
-
-  <article id="conocimientos" class="d-flex justify-content-center">
-      <div class="card my-3" style="width: 50%;">
-          <div class="card-body">
-              <h3 class="card-title"><strong>Conocimientos</strong></h3>
-              <div class="conocimientos-iconos my-3">HTML<img src="../assets/HTML.png"></div>
-              <div class="conocimientos-iconos my-3">CSS<img src="../assets/CSS.png"></div>
-              <div class="conocimientos-iconos my-3">JavaScript<img src="../assets/JS.png"></div>
-              <div class="conocimientos-iconos my-3">Python<img src="../assets/Python.png"></div>                
-              <div class="conocimientos-iconos my-3">Java<img src="../assets/Java.png"></div> 
-              <div class="conocimientos-iconos my-3">MySQL<img src="../assets/MySQL.png"></div>                                       
-          </div>
-      </div>
-  </article>
-
-  <!-- SECCIÓN PROYECTOS -->
-
-  <article id="proyectos" class="d-flex justify-content-center">
-      <div class="card my-3" style="width: 50%;">
-          <div class="card-body">
-            <h3 class="card-title"><strong>Proyectos</strong></h3>
-            <p class="card-text">Base de Datos SQL</p>                  
-          </div>
-      </div>
-  </article>
-
-  <!-- SECCIÓN EXPERIENCIA LABORAL -->
-
-  <article id="experiencia laboral" class="d-flex justify-content-center">
-      <div class="card my-3" style="width: 50%;">
-          <div class="card-body">
-            <h3 class="card-title"><strong>Experiencia laboral</strong></h3>
-            <p class="card-text">Estudiante de Desarrollo Web y Aplicaciones Digitales. Como 
-              desafío personal estoy buscando mi primera experiencia
-              laboral en el área de IT para poder aplicar mis conocimientos en un equipo de trabajo y
-              crecer profesionalmente.</p>                  
-          </div>
-      </div>
-  </article>
-
-  <!-- SECCIÓN FORMACIÓN ACADÉMICA -->            
-
-  <article id="formacion academica" class="d-flex justify-content-center">
-      <div class="card my-3" style="width: 50%;">
-          <div class="card-body">
-            <h3 class="card-title"><strong>Formación Académica</strong></h3>
-            <p class="card-text">Estudiante de Desarrollo Web y Aplicaciones Digitales. Como 
-              desafío personal estoy buscando mi primera experiencia
-              laboral en el área de IT para poder aplicar mis conocimientos en un equipo de trabajo y
-              crecer profesionalmente.</p>                  
-          </div>
-      </div>
-  </article>
-
-  <!-- SECCIÓN CONTACTO -->
-
-  <article id="contacto" class="d-flex justify-content-center">
-      <div class="card my-3" style="width: 50%;">
-          <div class="card-body">
-            <h3 class="card-title"><strong>Contacto</strong></h3>
-            <p class="card-text">Estudiante de Desarrollo Web y Aplicaciones Digitales. Como 
-              desafío personal estoy buscando mi primera experiencia
-              laboral en el área de IT para poder aplicar mis conocimientos en un equipo de trabajo y
-              crecer profesionalmente.</p>                  
-          </div>
-      </div>
-  </article>
-</section>
-
-  <!-- PIE DE PÁGINA -->
-
-<footer class="w-100 flex-wrap p-2">  
-    <div class="d-flex align-items-center justify-content-center" id="iconos">                
-        <a href="#" class="mx-2"><img src="../assets/Instagram.png"></a>
-        <a href="#" class="mx-2"><img src="../assets/Linkedin.png" ></a>
-        <a href="#" class="mx-2"><img src="../assets/GitHub2.png" style="height:50px"></a>
-    </div>
-      
-</footer>
-
+<app-header></app-header>
+<app-banner></app-banner>
+<app-acercademi></app-acercademi>
+<app-conocimientos></app-conocimientos>
+<app-experiencia-laboral></app-experiencia-laboral>
+<app-proyectos></app-proyectos>
+<app-formacion-academica></app-formacion-academica>
+<app-contacto></app-contacto>
+<app-footer></app-footer>
