--- a/Proyecto-Angular/src/app/components/header/header.component.css
+++ b/Proyecto-Angular/src/app/components/header/header.component.css
@@ -20,8 +20,11 @@
     border-radius: 10%;
 }
 
-a > img {
+#logo {
    height:3em
+}
+#logo:hover{
+    filter:drop-shadow(0px 0px 10px lightblue)    
 }
 
 #menu {
