realineacion nav-bar

--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -1,16 +1,15 @@
 <header>    
-    <nav class="navbar navbar-expand-lg fixed-top p-1" id="menu">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg fixed-top p-1" id="menu">        
             <a class="navbar-brand ms-3" href="#">
                 <img id="logo" src="../assets/logo2.png">                
             </a>
-            <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse" 
+            <button class="navbar-toggler bg-secondary me-1" type="button" data-bs-toggle="collapse" 
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
             aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-around" id="navbarSupportedContent">
-                <ul id="nav-colapsado" class="navbar-nav mb-2 ms-5 mb-lg-0 align-items-center">                            
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul id="nav-colapsado" class="navbar-nav mb-2 me-2 mb-lg-0 align-items-center">                            
                     <li class="nav-item">
                         <a class="nav-link" href="#acerca de mi">Acerca de mí</a>
                     </li>                
@@ -29,14 +28,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
-                    <li class="nav-item ms-4">
+                    <li class="nav-item ms-2">
                         <a class="nav-link" href="#"> <button id="boton_cv" >Currículum</button></a>
-                    </li>
-                    <li class="nav-item ms-5">
-                        <a class="nav-link" href="#"> <button id="boton_login" >Login</button></a>
-                    </li>
-                </ul>                        
+                    </li>                    
+                </ul>  
+                <div class="d-flex justify-content-end me-lg-3 me-2">
+                    <a class="nav-link" href="#"> <button id="boton_login" >Login</button></a>
+                </div>                      
             </div>
-        </div>
+        
     </nav>
    
