--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -1,6 +1,6 @@
-<div class="d-flex justify-content-center align-items-center">
-    <img src="../assets/Banner.jpg" width="100%" style="height:30em">
-    <img src="../assets/Foto Perfil.jpg" style="border-radius: 50%; height: 15em;
+<div class="d-flex justify-content-center align-items-center" style="height:92vh">    
+    <img src="../assets/Banner.jpg" width="100%" style="height:100%;">
+    <img src="../assets/Foto Perfil.jpg" style="border-radius: 50%; height: 25em;
     z-index: 1; position: absolute">
     <div style="position: absolute;z-index: 1; margin-bottom: 2em; align-self: end">
         <h2 id="a" style="font-family:Blippo; text-align: center; font-weight: bold;">
@@ -8,3 +8,4 @@
         <h5 style="font-family:Blippo;font-weight: bold; text-align: center;">Desarrollador Web Full Stack</h5>
     </div>
 </div>
+
