--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>    
     <nav class="navbar navbar-expand-lg fixed-top p-1" id="menu">        
-        <div  class="container-fluid">
+        <div class="container-fluid">
             <a class="navbar-brand ms-3" (click)="contraerNav()" href="#">
                 <img id="logo" src="../assets/logo2.png">                
             </a>
@@ -36,9 +36,9 @@
                     </li>                    
                 </ul>  
                 <div class="d-flex justify-content-end me-lg-2">
-                    <a class="nav-link" href="#"> <button id="boton_login" (click)="contraerNav()">Login</button></a>
+                    <a class="nav-link" href="#"> <button id="boton_login" (click)="contraerNav()" data-bs-toggle="modal" data-bs-target="#exampleModal">Login </button></a>                                  
                 </div>                      
             </div>
         </div>        
-    </nav>    
+    </nav>      
 </header>   
