--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -5,7 +5,8 @@ body {
     font-family: 'Montserrat', sans-serif;
     background-color: #000000;
     color: white;
-    padding-top: 5em
+    padding-top: 5em;
+    overflow-x: hidden;
 }
 
 article > div {background-color: #00253E !important;
