--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -36,9 +36,10 @@
                     </li>                    
                 </ul>  
                 <div class="d-flex justify-content-end me-lg-2">
-                    <a class="nav-link" href="#"> <button id="boton_login" (click)="contraerNav()" data-bs-toggle="modal" data-bs-target="#exampleModal">Login </button></a>                                  
+                    <a class="nav-link" href="#"> <button id="boton_login" (click)="contraerNav()" data-bs-toggle="modal" data-bs-target="#loginModal">Login </button></a>                                                 
                 </div>                      
             </div>
         </div>        
     </nav>      
-</header>   
+</header> 
+<app-modal-login></app-modal-login>  
