--- a/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
+++ b/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
@@ -1,9 +1,9 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" [ngClass]="{'modal-lg': pantallaGrande}"  id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header justify-content-center">
-                        <h3 class="modal-title" id="exampleModalLabel">Iniciar Sesión</h3>                        
+                        <h3 class="modal-title" id="loginModalLabel">Iniciar Sesión</h3>                        
                     </div>
                     <div class="modal-body">
                         <label for="user" class="form-label">Usuario</label>         
@@ -26,8 +26,8 @@
                             placeholder="Ingrese su contraseña" >
                     </div>
                     <div class="modal-footer d-flex justify-content-between">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-primary">Ingresar</button>
+                        <button type="button" class="btn btn-danger" [ngClass]="{'btn-lg': pantallaGrande}" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary" [ngClass]="{'btn-lg': pantallaGrande}" >Ingresar</button>
                     </div>
                 </div>
             </div>
