--- a/Proyecto-Angular/src/app/components/banner/banner.component.css
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.css
@@ -26,7 +26,7 @@ h2, h5{
 }
 
 fa-icon{
-    font-size:4em; 
+    font-size:3.5em; 
     color:rgb(36, 95, 184);
     position:absolute;
     z-index: 3;
@@ -35,7 +35,7 @@ fa-icon{
 }
 
 #editar-texto{
-    font-size: 3em !important
+    font-size: 2.5em !important
 }
 
 #div-editar-banner{
@@ -44,6 +44,25 @@ fa-icon{
     position:absolute
 }
 
+.textoModal, .etiquetaModal, .inputModal {
+    color:black !important
+}
+
+.etiquetaModal {
+    width: 35%
+}
+
+.inputModal {
+    width: 65%
+}
+
+.imagenEdicion{
+    height: 8em;
+}
+
+.inputEdicion{
+    width: 11em
+}
 
 @media screen and (min-width: 1400px){ 
     h2{
