--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -3,22 +3,193 @@
         id="div-editar-banner"
         class="d-flex align-items-start justify-content-end px-4"
         *ngIf="modoEdicion">
-        <fa-icon [icon]="faSquarePen"></fa-icon>
+        <fa-icon 
+            [icon]="faSquarePen" 
+            data-bs-toggle="modal" 
+            data-bs-target="#bannerModal">
+        </fa-icon>
     </div>
     <img 
-        id="banner" 
+        id="banner"
+        #banner 
         src="../assets/Banner.jpg"
     >  
     <div id="sub-container">
         <div class="d-flex justify-content-end align-items-start" *ngIf="modoEdicion">
-            <fa-icon [icon]="faSquarePen"></fa-icon>
+            <fa-icon 
+                [icon]="faSquarePen"
+                data-bs-toggle="modal" 
+                data-bs-target="#perfilModal">
+            </fa-icon>
         </div>
-        <img id="foto-perfil" src="../assets/Foto Perfil.jpg">
-        <div class="d-flex justify-content-end align-items-start" *ngIf="modoEdicion">
-            <fa-icon [icon]="faSquarePen" id="editar-texto"></fa-icon>
+        <img 
+            id="foto-perfil" 
+            src="../assets/Foto Perfil.jpg"
+            #fotoPerfil>
+        <div class="d-flex justify-content-end align-items-start pe-3" *ngIf="modoEdicion">
+            <fa-icon 
+                [icon]="faSquarePen" 
+                id="editar-texto"
+                data-bs-toggle="modal" 
+                data-bs-target="#textoModal">
+            </fa-icon>
         </div>
         <h2>Julián Meneses </h2>
         <h5>Desarrollador Web Full Stack</h5>
     </div>
 </div>
+
+<!-- MODAL IMAGEN BANNER -->
+
+<div 
+    class="modal fade" 
+    [ngClass]="{'modal-lg': pantallaGrande}"  
+    id="bannerModal" tabindex="-1" 
+    aria-labelledby="bannerModalLabel"
+    aria-hidden="true"
+>
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header justify-content-center">
+                <h3 class="modal-title textoModal" id="bannerModalLabel">Editar Banner</h3>                        
+            </div>
+            <div class="modal-body">                                 
+                <div class="mb-3">
+                    <label for="user" class="form-label me-5 textoModal">Imagen actual</label>
+                    <img class="imagenEdicion" src="../assets/Banner.jpg">
+                </div>                        
+                <label for="user" class="form-label textoModal">Nueva Imagen</label>
+                <div class="d-flex align-items-baseline mb-3">                            
+                    <input class="inputEdicion" (change)="capturarImagen($event)" type="file">
+                    <label class="textoModal">{{nombreArchivo}}</label>                            
+                </div>                        
+                <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-3" [src]="previsualizacionImagen">
+                
+                <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                    <button 
+                        type="button" 
+                        class="btn btn-danger" 
+                        [ngClass]="{'btn-lg': pantallaGrande}" 
+                        data-bs-dismiss="modal"
+                        (click)="eliminarImagen()">
+                        Cerrar
+                    </button>
+                    <button 
+                        type="button" 
+                        class="btn btn-primary" 
+                        [ngClass]="{'btn-lg': pantallaGrande}"                            
+                        data-bs-dismiss="modal"
+                        (click)="cambiarBanner()">
+                        Aceptar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- MODAL IMAGEN PERFIL -->
+
+<div 
+    class="modal fade" 
+    [ngClass]="{'modal-lg': pantallaGrande}"  
+    id="perfilModal" tabindex="-1" 
+    aria-labelledby="perfilModalLabel"
+    aria-hidden="true"
+>
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header justify-content-center">
+                <h3 class="modal-title textoModal" id="perfilModalLabel">Editar Foto de Perfil</h3>                        
+            </div>
+            <div class="modal-body">                                 
+                <div class="mb-3">
+                    <label for="user" class="form-label me-5 textoModal">Imagen actual</label>
+                    <img class="imagenEdicion" src="../assets/Foto Perfil.jpg">
+                </div>                        
+                <label for="user" class="form-label textoModal">Nueva Imagen</label>
+                <div class="d-flex align-items-baseline mb-3">                            
+                    <input class="inputEdicion" (change)="capturarImagen($event)" type="file">
+                    <label class="textoModal">{{nombreArchivo}}</label>                            
+                </div>                        
+                <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-3" [src]="previsualizacionImagen">
+                
+                <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                    <button 
+                        type="button" 
+                        class="btn btn-danger" 
+                        [ngClass]="{'btn-lg': pantallaGrande}" 
+                        data-bs-dismiss="modal"
+                        (click)="eliminarImagen()">
+                        Cerrar
+                    </button>
+                    <button 
+                        type="button" 
+                        class="btn btn-primary" 
+                        [ngClass]="{'btn-lg': pantallaGrande}"                            
+                        data-bs-dismiss="modal"
+                        (click)="cambiarFotoPerfil()">
+                        Aceptar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- MODAL Titulo y Subtitulo -->
+
+<div 
+    class="modal fade" 
+    [ngClass]="{'modal-lg': pantallaGrande}"  
+    id="textoModal" tabindex="-1" 
+    aria-labelledby="textoModalLabel"
+    aria-hidden="true"
+>
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header justify-content-center">
+                <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Subtítulo</h3>                        
+            </div>
+            <div class="modal-body">                                 
+                <div class="d-flex">
+                    <label for="user" class="form-label etiquetaModal">Título actual</label>
+                    <p class="etiquetaModal"><b>Julián Meneses</b></p>                    
+                </div>
+                <div class="d-flex align-items-baseline mb-3">
+                    <label for="user" class="form-label etiquetaModal">Nuevo título</label>
+                    <input type="text" class="form-control inputModal" placeholder="Ingrese nuevo título">
+                </div> 
+                <div class="d-flex align-items-baseline">
+                    <label for="user" class="form-label etiquetaModal">Subtítulo actual</label>
+                    <p class="textoModal etiquetaModal"><b>Desarrollador Web Full Stack</b></p>                                       
+                </div>
+                <div class="d-flex align-items-baseline mb-1">
+                    <label for="user" class="form-label etiquetaModal">Nuevo subtítulo</label>
+                    <input type="text" class="form-control  inputModal" placeholder="Ingrese nuevo subtítulo">
+                </div>                
+                
+                <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                    <button 
+                        type="button" 
+                        class="btn btn-danger" 
+                        [ngClass]="{'btn-lg': pantallaGrande}" 
+                        data-bs-dismiss="modal"
+                        (click)="eliminarImagen()">
+                        Cerrar
+                    </button>
+                    <button 
+                        type="button" 
+                        class="btn btn-primary" 
+                        [ngClass]="{'btn-lg': pantallaGrande}"                            
+                        data-bs-dismiss="modal"
+                        (click)="cambiarFotoPerfil()">
+                        Aceptar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    
 
