fondo negro vh 100 cada sección

--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -1,7 +1,7 @@
-<article  class="d-flex justify-content-center mt-3">
+<section class="d-flex justify-content-center align-items-center">
     <div class="card my-3" style="width: 50%;">
         <div class="card-body" id="parent">                        
-            <h3 class="card-title"  id="acerca de mi" style="display: inline-block;"><strong>Acerca de mí</strong></h3>
+            <h3 class="card-title"  id="acerca de mi" style="display: inline-block; color: lightblue !important"><strong>Acerca de mí</strong></h3>
             <div style="display: inline-block; margin-left: 60%; position: relative;"  (click)="activarInput()">
                 <a href=#>
                     <fa-icon [icon]="faSquarePen" style="font-size:30px; color:rgb(36, 95, 184) !important"></fa-icon>
@@ -15,4 +15,4 @@
             <input  style="width:100%;display: none">                                                          
         </div>             
     </div>
-</article>    
+</section>    
