--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
@@ -1,4 +1,4 @@
-<article id="conocimientos" class="d-flex justify-content-center">
+<section id="conocimientos" class="d-flex justify-content-center">
     <div class="card my-3" style="width: 50%;">
         <div class="card-body">
             <h3 class="card-title"><strong>Conocimientos</strong></h3>
@@ -10,4 +10,4 @@
             <div class="conocimientos-iconos my-3">MySQL<img src="../assets/MySQL.png"></div>                                       
         </div>
     </div>
-</article>
+</section>
