--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
@@ -1,4 +1,4 @@
-<article id="formacion academica" class="d-flex justify-content-center">
+<section id="formacion academica" class="d-flex justify-content-center">
     <div class="card my-3" style="width: 50%;">
         <div class="card-body">
           <h3 class="card-title"><strong>Formación Académica</strong></h3>
@@ -8,4 +8,4 @@
             crecer profesionalmente.</p>                  
         </div>
     </div>
-</article>
+</section>
