--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -4,9 +4,14 @@
             <a class="navbar-brand ms-3" (click)="contraerNav()" href="#">
                 <img id="logo" src="../assets/logo2.png">                
             </a>
-            <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" 
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
-            aria-expanded="false" aria-label="Toggle navigation">
+            <button 
+                class="navbar-toggler me-1" 
+                type="button" 
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation">
                 <span> 
                     <fa-icon [icon]="faBars"></fa-icon>
                 </span>
