--- a/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
@@ -1,8 +1,8 @@
-<article  class="d-flex justify-content-center"  id="proyectos" style="height: 100vh">
+<section  class="d-flex justify-content-center"  id="proyectos" style="height: 100vh">
     <div class="card my-3"  style="width: 50%;">
         <div class="card-body">
           <h3 class="card-title" ><strong>Proyectos</strong></h3>
           <p class="card-text" >Base de Datos SQL</p>                  
         </div>
     </div>
-</article>
+</section>
