--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -2,15 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    background-color: black;
+    font-family: 'Montserrat';
+    background-color: black !important;
     color: white;
-    padding-top: 5em;
-    overflow-x: hidden;
+    padding-top: 5em;    
 }
 
-article > div { background-color: black !important;
-border-radius: 5% !important;}
+section > div{    
+    background-color: black !important;
+}
+
+section {
+    height: 100vh
+}
 
 .conocimientos-iconos > img, a > img {height: 30px;
 margin-left: 10px;}
