menu desaparece con el scroll

--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.html
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.html
@@ -1,4 +1,4 @@
-<section id="contacto" class="d-flex justify-content-center">
+<section id="contacto" class="d-flex justify-content-center align-items-center">
     <div class="card my-3" style="width: 50%;">
         <div class="card-body">
           <h3 class="card-title"><strong>Contacto</strong></h3>
