--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header> 
+<header appScroll> 
     <nav class="navbar navbar-expand-xl fixed-top p-1" id="menu">        
         <div class="container-fluid">
             <a class="navbar-brand ms-3" (click)="contraerNav()" href="#">
@@ -25,10 +25,10 @@
                         <a class="nav-link link" href="#conocimientos" (click)="contraerNav()">Conocimientos</a>
                     </li>                            
                     <li class="nav-item">
-                        <a class="nav-link link" href="#proyectos" (click)="contraerNav()">Proyectos</a>
+                        <a class="nav-link link" href="#experiencia laboral" (click)="contraerNav()">Experiencia Laboral</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link" href="#experiencia laboral" (click)="contraerNav()">Experiencia Laboral</a>
+                        <a class="nav-link link" href="#proyectos" (click)="contraerNav()">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link link" href="#formacion academica" (click)="contraerNav()">Formación Académica</a>
