--- a/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
@@ -1,4 +1,4 @@
-<section  class="d-flex justify-content-center"  id="proyectos" style="height: 100vh">
+<section  class="d-flex justify-content-center align-items-center"  id="proyectos">
     <div class="card my-3"  style="width: 50%;">
         <div class="card-body">
           <h3 class="card-title" ><strong>Proyectos</strong></h3>
