--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -1,13 +1,13 @@
-<section class="d-flex justify-content-center align-items-center">
-    <div class="card my-3" style="width: 50%;">
-        <div class="card-body" id="parent">                        
-            <h3 class="card-title"  id="acerca de mi" style="display: inline-block; color: lightblue !important"><strong>Acerca de mí</strong></h3>
+<section class="d-flex justify-content-center align-items-center" id="acerca de mi">
+    <div class="card my-3" style="width: 50%;" >
+        <div class="card-body" id="parent" >                        
+            <h3 class="card-title" style="display: inline-block; color: lightblue !important"><strong>Acerca de mí</strong></h3>
             <div style="display: inline-block; margin-left: 60%; position: relative;"  (click)="activarInput()">
                 <a href=#>
                     <fa-icon [icon]="faSquarePen" style="font-size:30px; color:rgb(36, 95, 184) !important"></fa-icon>
                 </a>
             </div>                                                               
-            <p class="card-text">Estudiante de Desarrollo Web y Aplicaciones Digitales. Como 
+            <p class="card-text" >Estudiante de Desarrollo Web y Aplicaciones Digitales. Como 
             desafío personal estoy buscando mi primera experiencia
             laboral en el área de IT para poder aplicar mis conocimientos en un equipo de trabajo y
             crecer profesionalmente.</p>  
