--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
@@ -1,4 +1,4 @@
-<section id="conocimientos" class="d-flex justify-content-center">
+<section  class="d-flex justify-content-center align-items-center" id="conocimientos">
     <div class="card my-3" style="width: 50%;">
         <div class="card-body">
             <h3 class="card-title"><strong>Conocimientos</strong></h3>
