--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -1,4 +1,4 @@
-<section id="experiencia laboral" class="d-flex justify-content-center">
+<section id="experiencia laboral" class="d-flex justify-content-center align-items-center">
     <div class="card my-3" style="width: 50%;">
         <div class="card-body">
           <h3 class="card-title"><strong>Experiencia laboral</strong></h3>
