--- a/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
+++ b/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
@@ -1,47 +1,52 @@
-<div class="modal fade" [ngClass]="{'modal-lg': pantallaGrande}"  id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header justify-content-center">
-                        <h3 class="modal-title" id="loginModalLabel">Iniciar Sesión</h3>                        
-                    </div>
-                    <div class="modal-body">
-                        <label for="user" class="form-label">Usuario</label>         
-                        <input
-                            class="form-control" 
-                            type="text" 
-                            id="user" 
-                            name="user" 
-                            placeholder="Ingrese su usuario" 
-                            maxlength="15">
+<div 
+    class="modal fade" 
+    [ngClass]="{'modal-lg': pantallaGrande}"  
+    id="loginModal" tabindex="-1" 
+    aria-labelledby="loginModalLabel"
+    aria-hidden="true"
+    >
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header justify-content-center">
+                <h3 class="modal-title" id="loginModalLabel">Iniciar Sesión</h3>                        
+            </div>
+            <div class="modal-body">
+                <label for="user" class="form-label">Usuario</label>         
+                <input
+                    class="form-control" 
+                    type="text" 
+                    id="user" 
+                    name="user" 
+                    placeholder="Ingrese su usuario" 
+                    maxlength="15">
 
-                        <label for="password" class="form-label">Contraseña</label>      
-    
-                        <input
-                            class="form-control" 
-                            type="password" 
-                            id="password" 
-                            name="password"
-                            maxlength="15" 
-                            placeholder="Ingrese su contraseña" >
-                    </div>
-                    <div class="modal-footer d-flex justify-content-between">
-                        <button 
-                            type="button" 
-                            class="btn btn-danger" 
-                            [ngClass]="{'btn-lg': pantallaGrande}" 
-                            data-bs-dismiss="modal">
-                            Cerrar
-                        </button>
-                        <button 
-                            type="button" 
-                            class="btn btn-primary" 
-                            [ngClass]="{'btn-lg': pantallaGrande}"
-                            (click)="alternarEdicion()"
-                            data-bs-dismiss="modal">
-                            Ingresar
-                        </button>
-                    </div>
-                </div>
+                <label for="password" class="form-label">Contraseña</label>      
+
+                <input
+                    class="form-control" 
+                    type="password" 
+                    id="password" 
+                    name="password"
+                    maxlength="15" 
+                    placeholder="Ingrese su contraseña" >
+            </div>
+            <div class="modal-footer d-flex justify-content-between">
+                <button 
+                    type="button" 
+                    class="btn btn-danger" 
+                    [ngClass]="{'btn-lg': pantallaGrande}" 
+                    data-bs-dismiss="modal">
+                    Cerrar
+                </button>
+                <button 
+                    type="button" 
+                    class="btn btn-primary" 
+                    [ngClass]="{'btn-lg': pantallaGrande}"
+                    (click)="alternarEdicion()"
+                    data-bs-dismiss="modal">
+                    Ingresar
+                </button>
             </div>
         </div>
+    </div>
+</div>
